--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vuesax": "^3.0.53"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
